This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: cmathmodule.c: Extra comma in enum - fails on AIX
Type: compile error Stage: resolved
Components: Build, Extension Modules Versions: Python 2.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: christian.heimes, mark.dickinson, srid
Priority: normal Keywords:

Created on 2009-08-04 19:19 by srid, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Messages (2)
msg91267 - (view) Author: Sridhar Ratnakumar (srid) Date: 2009-08-04 19:19
Please the remove extra comma in Modules/cmathmodule.c

64 :	 	 	eimes enum special_types {
65 :	 	 	eimes 	ST_NINF,	/* 0, negative infinity 
*/
66 :	 	 	eimes 	ST_NEG,		/* 1, negative finite 
number (nonzero) */
67 :	 	 	eimes 	ST_NZERO,	/* 2, -0. */
68 :	 	 	eimes 	ST_PZERO,	/* 3, +0. */
69 :	 	 	eimes 	ST_POS,		/* 4, positive finite 
number (nonzero) */
70 :	 	 	eimes 	ST_PINF,	/* 5, positive infinity 
*/
71 :	 	 	eimes 	ST_NAN,		/* 6, Not a Number */
72 :	 	 	eimes };

To see why this is necessary, peruse a similar issue reported earlier: 
http://bugs.python.org/issue5889
msg91268 - (view) Author: Mark Dickinson (mark.dickinson) * (Python committer) Date: 2009-08-04 19:26
Thanks!  Fixed in r74303, r74304, r74305, r74306.
History
Date User Action Args
2022-04-11 14:56:51adminsetgithub: 50893
2009-08-04 19:26:23mark.dickinsonsetstatus: open -> closed

nosy: + mark.dickinson
messages: + msg91268

resolution: fixed
stage: resolved
2009-08-04 19:19:55sridcreate