Merged revisions 74303 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r74303 | mark.dickinson | 2009-08-04 20:22:35 +0100 (Tue, 04 Aug 2009) | 2 lines

  Issue #6644:  Fix compile error on AIX.
........